terragrunt-stream/stream-svc-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stream-svc
  labels:
    app: stream-svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: stream-svc
