terragrunt-stream/stream-svc-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stream-svc
  labels:
    app: stream-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stream.com
      secretName: stream-tls
  rules:
    - host: stream.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stream-svc
                port:
                  number: 8080
